# TelemetryReader

./: Cargo.toml  README.md
telemetry_app/: Cargo.toml
telemetry_app/src/: main.rs
telemetry_lib/: Cargo.toml
telemetry_lib/src/: iracing.rs  lib.rs
telemetry_lib/src/iracing/: connection.rs  iracing_client.rs  utils.rs
