[package]
name = "telemetry_reader"
version = "0.1.0"
edition = "2021"
authors = ["Vladyslav Selishchev <vladyslav.selishchev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telemetry_reader_lib = {path = "../telemetry_lib"}